# skytable

./: .build.yml  .ci.yml  .dockerignore  .gitignore  .travis.yml  ACKNOWLEDGEMENTS.txt  AUTHORS.md  CHANGELOG.md  CLA-draft.md  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  actiondoc.yml  actions.jsonc  buildandbin.sh  pushrelease.sh  release.sh  tdb-dockerfile.toml
.cargo/: config.toml
cli/: Cargo.toml  README.md  build.rs
cli/help_text/: help  welcome
cli/src/: argparse.rs  args.rs  benchmark.rs  cli.rs  cli.yml  client.rs  error.rs  macros.rs  main.rs  query.rs  repl.rs  resp.rs  runner.rs  terminal.rs  tests.rs  tokenizer.rs
cli/src/protocol/: deserializer.rs  mod.rs
harness/: Cargo.toml  README.md
harness/src/: build.rs  bundle.rs  cli.rs  error.rs  linuxpkg.rs  main.rs  presetup.rs  test.rs  tests.rs  util.rs
harness/src/test/: mod.rs  svc.rs
libcore/: Cargo.toml  terrapipe-spec-0.1.0.md  terrapipe-spec.md
libcore/src/: lib.rs  terrapipe.rs
libsky/: Cargo.toml
libsky/src/: lib.rs  terrapipe.rs  util.rs
libstress/: Cargo.toml
libstress/src/: lib.rs  traits.rs
server/: Cargo.toml  README.md  build.rs  cert.pem  out.rs  ret.rs
server/help_text/: help
server/native/: flock-posix.c  fsc.c  fscposix.c
server/src/: arbiter.rs  cli.yml  coredb.rs  dbnet.rs  main.rs  protocol.rs  resputil.rs  util.rs
server/src/actions/: dbsize.rs  del.rs  exists.rs  flushdb.rs  get.rs  jget.rs  keylen.rs  lskeys.rs  macros.rs  mget.rs  mod.rs  mpop.rs  mset.rs  mupdate.rs  pop.rs  set.rs  strong.rs  update.rs  uset.rs  whereami.rs
server/src/actions/lists/: lget.rs  lmod.rs  macros.rs  mod.rs
server/src/actions/strong/: mod.rs  sdel.rs  sset.rs  supdate.rs  tests.rs
server/src/admin/: mksnap.rs  mod.rs  sys.rs
server/src/auth/: errors.rs  keys.rs  mod.rs  provider.rs  tests.rs
server/src/blueql/: ast.rs  error.rs  executor.rs  lex.rs  lexer.rs  mod.rs  tests.rs  util.rs
server/src/cluster/: mod.rs
server/src/compat/: mod.rs
server/src/config/: cfg2.rs  cfgcli.rs  cfgcli2.rs  cfgenv.rs  cfgenv2.rs  cfgerr.rs  cfgfile.rs  cfgfile2.rs  definitions.rs  env.rs  eval.rs  feedback.rs  macros.rs  mod.rs  tests.rs
server/src/coredb/: array.rs  buffers.rs  corestore.rs  htable.rs  iarray.rs  lazy.rs  lock.rs  memstore.rs  mod.rs  multins.rs  skymap.rs  table.rs
server/src/corestore/: array.rs  backoff.rs  booltable.rs  buffers.rs  heap_array.rs  htable.rs  iarray.rs  lazy.rs  lock.rs  memstore.rs  mod.rs  rc.rs  table.rs  tests.rs
server/src/corestore/map/: bref.rs  iter.rs  mod.rs
server/src/dbnet/: con.rs  connection.rs  listener.rs  macros.rs  mod.rs  prelude.rs  tcp.rs  tls.rs
server/src/diskstore/: cyansfw.rs  cyanswf.rs  flock.rs  mod.rs  recordlock.rs  sengine.rs  snapshot.rs  snapstore.rs
server/src/engine/: config.rs  error.rs  macros.rs  mod.rs  query.rs
server/src/engine/core/: data.rs  dcl.rs  ddl_misc.rs  def.rs  exec.rs  idx.rs  mod.rs  model.rs  query_meta.rs  space.rs  system_db.rs  tests.rs  util.rs
server/src/engine/data/: cell.rs  dict.rs  lit.rs  macros.rs  md_dict.rs  mod.rs  spec.rs  tag.rs  uuid.rs
server/src/engine/fractal/: config.rs  context.rs  drivers.rs  error.rs  mgr.rs  mod.rs  sys_store.rs  test_utils.rs  util.rs
server/src/engine/hash/: mod.rs
server/src/engine/idx/: meta.rs  mod.rs  stdhm.rs  stord.rs  tests.rs
server/src/engine/mem/: astr.rs  buf.rs  fixed_vec.rs  ll.rs  mod.rs  numbuf.rs  rawslice.rs  scanner.rs  stackop.rs  tests.rs  uarray.rs  unsafe_apis.rs  vinline.rs  word.rs
server/src/engine/memory/: core.rs  mod.rs
server/src/engine/net/: mod.rs
server/src/engine/ql/: ast.rs  benches.rs  dcl.rs  ddl.rs  dml.rs  lex.rs  lexer.rs  macros.rs  mod.rs  schema.rs  tests.rs
server/src/engine/storage/: checksum.rs  header.rs  macros.rs  mod.rs
server/src/engine/sync/: atm.rs  cell.rs  mod.rs  queue.rs  smart.rs
server/src/engine/tests/: cfg.rs  macros.rs  mod.rs
server/src/kvengine/: dbsize.rs  del.rs  encoding.rs  exists.rs  flushdb.rs  get.rs  jget.rs  keylen.rs  listmap.rs  lskeys.rs  macros.rs  mget.rs  mksnap.rs  mod.rs  mset.rs  mupdate.rs  set.rs  strong.rs  tests.rs  update.rs  uset.rs
server/src/protocol/: benches.rs  con.rs  deserializer.rs  element.rs  interface.rs  iter.rs  mod.rs  parserv2.rs  raw_parser.rs  responses.rs  tests.rs  tls.rs
server/src/queryengine/: ddl.rs  del.rs  exists.rs  get.rs  inspect.rs  mod.rs  parser.rs  queryutil.rs  set.rs  tests.rs  update.rs
server/src/registry/: mod.rs
server/src/resp/: mod.rs  writer.rs
server/src/services/: bgsave.rs  mod.rs  snapshot.rs
server/src/skymap/: bitmask.rs  control_bytes.rs  generic.rs  mapalloc.rs  mod.rs  raw.rs  scopeguard.rs  sse2.rs  util.rs
server/src/storage/: bytemarks.rs  flush.rs  interface.rs  iter.rs  macros.rs  mod.rs  preload.rs  sengine.rs  tests.rs  unflush.rs
server/src/tests/: auth.rs  ddl_tests.rs  inspect_tests.rs  issue_tests.rs  kvengine.rs  kvengine_encoding.rs  kvengine_list.rs  kvengine_tests.rs  macros.rs  mod.rs  persist.rs  pipeline.rs  snapshot.rs
server/src/tls/: mod.rs
server/src/util/: compiler.rs  error.rs  macros.rs  mod.rs  os.rs  test_utils.rs
sky-bench/: Cargo.toml  README.md  build.rs
sky-bench/help_text/: help
sky-bench/src/: args.rs  bench.rs  benchtool.rs  cli.rs  cli.yml  config.rs  error.rs  main.rs  pool.rs  report.rs  runtime.rs  testkey.rs  util.rs
sky-bench/src/bench/: benches.rs  mod.rs  report.rs  validation.rs
sky-bench/src/benchtool/: mod.rs  validation.rs
sky-bench/src/runtime/: fury.rs  rookie.rs
sky-macros/: Cargo.toml
sky-macros/src/: dbtest.rs  dbtest_fn.rs  dbtest_mod.rs  lib.rs  util.rs
sky-migrate/: Cargo.toml  README.md
sky-migrate/src/: cli.rs  cli.yml  main.rs
stress-test/: Cargo.toml  README.md
stress-test/src/: linearity_client.rs  main.rs  utils.rs
tdb-bench/: Cargo.toml
tdb-bench/src/: cli.yml  main.rs
tdb-derive/: Cargo.toml
tdb-derive/src/: lib.rs
tdb-macros/: Cargo.toml
tdb-macros/src/: lib.rs
(+320 files in other folders)
