[package]
name = "skysh"
version = "0.8.0"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
libsky = { path = "../libsky" }
skytable = { git = "https://github.com/skytable/client-rust", branch = "next", features = [
  "aio",
  "aio-sslv",
], default-features = false }
# external deps
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "2", features = ["yaml"] }
rustyline = "12.0.0"
crossterm = "0.26.1"
lazy_static = "1.4.0"
