[package]
name = "skysh"
version = "0.8.0-beta.2"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"
description = "The Skytable Shell (skysh)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
libsky = { path = "../libsky" }
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "octave" }
# external deps
crossterm = "0.27.0"
rustyline = "13.0.0"
