[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "octave" }
libsky = { path = "../libsky" }
# external deps
env_logger = "0.10.0"
log = "0.4.19"
zip = { version = "0.6.6", features = ["deflate"] }
powershell_script = "1.1.0"
openssl = { version = "0.10.55", features = ["vendored"] }
