[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
libsky = { path = "../libsky" }
# external deps
env_logger = "0.11.3"
log = "0.4.21"
zip = { version = "0.6.6", features = ["deflate"] }
powershell_script = "1.1.0"
openssl = { version = "0.10.64", features = ["vendored"] }
