[package]
name = "libstress"
version = "0.7.6"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external deps
num_cpus = "1.15.0"
crossbeam-channel = "0.5.6"
rayon = "1.6.1"
log = "0.4.17"
rand = "0.8.5"
