[package]
name = "libstress"
version = "0.7.7"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external deps
num_cpus = "1.15.0"
crossbeam-channel = "0.5.7"
rayon = "1.7.0"
log = "0.4.17"
rand = "0.8.5"
