[package]
name = "libstress"
version = "0.8.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external deps
crossbeam-channel = "0.5.8"
rayon = "1.7.0"
log = "0.4.19"
rand = "0.8.5"
