[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
build = "build.rs"
edition = "2021"
name = "skyd"
version = "0.8.0"

[dependencies]
# internal deps
libsky = { path = "../libsky" }
sky_macros = { path = "../sky-macros" }
rcrypt = "0.4.0"
# external deps
bytes = "1.4.0"
env_logger = "0.10.0"
log = "0.4.19"
openssl = { version = "0.10.56", features = ["vendored"] }
crossbeam-epoch = { version = "0.9.15" }
parking_lot = "0.12.1"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["full"] }
tokio-openssl = "0.6.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
crc = "3.0.1"
serde_yaml = "0.9"

[target.'cfg(all(not(target_env = "msvc"), not(miri)))'.dependencies]
# external deps
jemallocator = "0.5.4"
[target.'cfg(target_os = "windows")'.dependencies]
# external deps
winapi = { version = "0.3.9", features = ["fileapi"] }

[target.'cfg(unix)'.dependencies]
# external deps
libc = "0.2.147"

[target.'cfg(unix)'.build-dependencies]
# external deps
cc = "1.0.82"

[dev-dependencies]
# external deps
rand = "0.8.5"
tokio = { version = "1.30.0", features = ["test-util"] }

[features]
nightly = []
persist-suite = []

[package.metadata.deb]
name = "skytable"
maintainer = "Sayan Nandan <nandansayan@outlook.com>"
copyright = "2022, Sayan Nandan <nandansayan@outlook.com>"
license-file = ["../LICENSE", "0"]
maintainer-scripts = "../pkg/debian/"
extended-description-file = "pkg/debian/description.txt"
depends = "$auto"
section = "database"
priority = "optional"
assets = [
  [
    "target/release/skyd",
    "usr/bin/",
    "755",
  ],
  [
    "target/release/skysh",
    "usr/bin/",
    "755",
  ],
  [
    "target/release/sky-bench",
    "usr/bin/",
    "755",
  ],
  [
    "../pkg/common/skyd.service",
    "/etc/systemd/system/skyd.service",
    "644",
  ],
]
