[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"
name = "sky-bench"
version = "0.8.0-beta"
description = "The Skytable benchmark tool can be used to benchmark Skytable installations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "octave" }
libsky = { path = "../libsky" }
# external deps
crossbeam-channel = "0.5.8"
num_cpus = "1.16.0"
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
