[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"
name = "sky_macros"
version = "0.7.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# external deps
proc-macro2 = "1.0.53"
quote = "1.0.26"
rand = "0.8.5"
syn = { version = "1", features = ["full"] }
