[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"
name = "sky_macros"
version = "0.8.0-beta.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# external deps
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "1.0.109", features = ["full"] }
libsky = { path = "../libsky" }
