[package]
name = "sky-migrate"
version = "0.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skytable = { git = "https://github.com/skytable/client-rust.git" }
env_logger = "0.9.0"
bincode = "1.3.3"
log = "0.4.14"
clap = { version = "2.33.3", features = ["yaml"] }
