[package]
name = "sky-migrate"
version = "0.7.3-alpha.2"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skytable = { git = "https://github.com/skytable/client-rust.git" }
env_logger = "0.9.0"
bincode = "1.3.3"
log = "0.4.14"
clap = { version = "2", features = ["yaml"] }
