[package]
name = "sky-migrate"
version = "0.8.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2021"
description = "The Skytable migration tool allows users coming from older versions (>=0.8.0) to upgrade their datasets to the latest Skytable version. This tool currently supports versions >= 0.8.0 and upgrading it to 0.7.0."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skytable = { git = "https://github.com/skytable/client-rust.git" }
env_logger = "0.9.1"
bincode = "1.3.3"
log = "0.4.17"
clap = { version = "4", features = ["derive"] }
