[package]
name = "stress-test"
version = "0.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
libstress = { path = "../libstress" }
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "next", features = [
    "dbg",
] }
sysinfo = "0.20.5"
devtimer = "4.0.1"
# external deps
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.4"
crossbeam-channel = "0.5.1"
num_cpus = "1.13.0"
