[package]
name = "stress-test"
version = "0.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
libstress = { path = "../libstress" }
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "next", features = [
    "dbg",
] }
devtimer = "4.0.1"
# external deps
sysinfo = "0.26.1"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
crossbeam-channel = "0.5.6"
