[package]
name = "tdb-bench"
version = "0.4.5"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
devtimer = "4.0.0"
libtdb = {path="../libtdb"}
clap = {version = "2.33.3", features=["yaml"]}
