[package]
name = "tdb-bench"
version = "0.5.0-alpha.2"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
devtimer = "4.0.0"
libtdb = {path="../libtdb"}
clap = {version = "2.33.3", features=["yaml"]}
serde = {version="1.0.117", features=["derive"]}
serde_json = "1.0.59"
