[package]
name = "tdb-bench"
version = "0.5.0"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
devtimer = "4.0.1"
libtdb = {path="../libtdb"}
clap = {version = "2.33.3", features=["yaml"]}
serde = {version="1.0.123", features=["derive"]}
serde_json = "1.0.61"
