[package]
name = "tdb_macros"
version = "0.1.0"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.46", features = ["full"]}
quote = "1.0.7"
rand = "0.7.3"
proc-macro2 = "1.0.24"
